crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_does_not_link_type_parameters_of_an_interface_and_its_method__html_list.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/index.md =====
# combinators

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>6</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>5</strong>
  <span>types</span>
</span>
<span class="ox-api-stat">
  <strong>3</strong>
  <span>members</span>
</span>
</div>

## Interfaces

| Interface | Description |
| ------ | ------ |
| [Boxed](./interfaces/Boxed.md) | A box. |

## Type Aliases

| Type Alias | Description |
| ------ | ------ |
| [Box](./type-aliases/Box.md) |  |
| [K](./type-aliases/K.md) |  |
| [Options](./type-aliases/Options.md) |  |
| [T](./type-aliases/T.md) |  |
| [U](./type-aliases/U.md) |  |

===== combinators/interfaces/Boxed.md =====
# Interface: Boxed<T>

<div id="boxed" class="ox-api-entry ox-api-entry--page">
<span class="ox-api-entry__meta"><span class="ox-api-badge">3 members</span></span>
<div class="ox-api-entry__prose">
<p>A box.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function Boxed(): void</code></pre>
</div>
<div class="ox-api-entry__section ox-api-entry__section--type-parameters">
<h4>Type Parameters</h4>
<table class="ox-api-entry__type-parameters-table">
<thead><tr><th>Name</th></tr></thead>
<tbody>
<tr>
  <td><code>T</code></td>
</tr>
</tbody>
</table>
</div>
<div class="ox-api-entry__section ox-api-entry__section--members">
<h4>Members</h4>
<div class="ox-api-entry__member-group">
<h5>Properties</h5>
<ul class="ox-api-entry__members-list">
<li id="property-transform" class="ox-api-entry__member">
  <div class="ox-api-entry__member-heading">
    <code class="ox-api-entry__member-name">transform</code>
    <span class="ox-api-entry__member-kind">property</span>
    <code class="ox-api-entry__member-type language-typescript">(value: T, other: U) =&gt; U</code>
  </div>
  <div class="ox-api-entry__member-description">Transforms the value.</div><ul class="ox-api-entry__type-parameters"><li class="ox-api-entry__type-parameter"><div class="ox-api-entry__type-parameter-heading"><code>U</code></div></li></ul><ul class="ox-api-entry__member-params"><li><code>value</code></li><li><code>other</code></li></ul>
</li>
<li id="property-value" class="ox-api-entry__member">
  <div class="ox-api-entry__member-heading">
    <code class="ox-api-entry__member-name">value</code>
    <span class="ox-api-entry__member-kind">property</span>
    <code class="ox-api-entry__member-type language-typescript">T</code>
  </div>
  <div class="ox-api-entry__member-description">The value.</div>
</li>
</ul>
</div>
<div class="ox-api-entry__member-group ox-api-entry__member-group--details">
<h5>Methods</h5>
<div class="ox-api-entry__member-details">
<section id="method-map" class="ox-api-entry__member-detail">
<h5>map()</h5>
<pre><code class="language-typescript">map&lt;U&gt;(fn: (value: T) =&gt; U): Box&lt;U&gt;;</code></pre>
<div class="ox-api-entry__member-description">Maps the value.</div><div class="ox-api-entry__member-detail-section ox-api-entry__member-detail-section--type-parameters">
<h6>Type Parameters</h6>
<ul class="ox-api-entry__type-parameters"><li class="ox-api-entry__type-parameter"><div class="ox-api-entry__type-parameter-heading"><code>U</code></div></li></ul>
</div><div class="ox-api-entry__member-detail-section ox-api-entry__member-detail-section--params">
<h6>Parameters</h6>
<ul class="ox-api-entry__member-params"><li><code>fn</code></li></ul>
</div><div class="ox-api-entry__member-detail-section ox-api-entry__member-detail-section--returns">
<h6>Returns</h6>
<code class="ox-api-entry__return-type"><a href="../type-aliases/Box.md">Box</a>&lt;U&gt;</code>
</div></section>
</div>
</div>
</div>
</div>
===== combinators/type-aliases/Box.md =====
# Type Alias: Box

<div id="box" class="ox-api-entry ox-api-entry--page">

</div>
===== combinators/type-aliases/K.md =====
# Type Alias: K

<div id="k" class="ox-api-entry ox-api-entry--page">

</div>
===== combinators/type-aliases/Options.md =====
# Type Alias: Options

<div id="options" class="ox-api-entry ox-api-entry--page">

</div>
===== combinators/type-aliases/T.md =====
# Type Alias: T

<div id="t" class="ox-api-entry ox-api-entry--page">

</div>
===== combinators/type-aliases/U.md =====
# Type Alias: U

<div id="u" class="ox-api-entry ox-api-entry--page">

</div>
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>6</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>5</strong>
  <span>types</span>
</span>
<span class="ox-api-stat">
  <strong>3</strong>
  <span>members</span>
</span>
</div>

## Modules

- [combinators](./combinators/index.md)
