crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_does_not_link_type_parameters_of_an_interface_and_its_method__markdown_table.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/index.md =====
# combinators

_6 symbols · 1 interfaces · 5 types · 3 members_

## Interfaces

- [Boxed](./interfaces/Boxed.md) - A box.

## Type Aliases

- [Box](./type-aliases/Box.md)
- [K](./type-aliases/K.md)
- [Options](./type-aliases/Options.md)
- [T](./type-aliases/T.md)
- [U](./type-aliases/U.md)

===== combinators/interfaces/Boxed.md =====
# Interface: Boxed<T>

A box.

## Signature

```ts
export function Boxed(): void
```

## Type Parameters

| Name |
| --- |
| `T` |

## Properties

| Name | Type | Description |
| --- | --- | --- |
| `transform` | `(value: T, other: U) => U` | Transforms the value. |
| `value` | `T` | The value. |

### transform Type Parameters

| Name |
| --- |
| `U` |

### transform Parameters

| Name | Type | Description |
| --- | --- | --- |
| `value` | `T` |  |
| `other` | `U` |  |

### transform Returns

`U`

## Methods

### map()

```ts
map<U>(fn: (value: T) => U): Box<U>;
```

Maps the value.

#### Type Parameters

| Name |
| --- |
| `U` |

#### Parameters

| Name | Type | Description |
| --- | --- | --- |
| `fn` | `(value: T) => U` |  |

#### Returns

[`Box`](../type-aliases/Box.md)\<`U`\>
===== combinators/type-aliases/Box.md =====
# Type Alias: Box

===== combinators/type-aliases/K.md =====
# Type Alias: K

===== combinators/type-aliases/Options.md =====
# Type Alias: Options

===== combinators/type-aliases/T.md =====
# Type Alias: T

===== combinators/type-aliases/U.md =====
# Type Alias: U

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 6 symbols · 1 interfaces · 5 types · 3 members_

## Modules

- [combinators](./combinators/index.md)
